Update App.config to use Microsoft Access connection strings

--- a/project/App.config
+++ b/project/App.config
@@ -4,9 +4,9 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <connectionStrings>
-    <add name="conn" connectionString="Data Source=JKWORLD\SQLEXPRESS2; Initial Catalog=atm; Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="project.My.MySettings.atmConnectionString" connectionString="Data Source=JKWORLD\SQLEXPRESS2;Initial Catalog=atm;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="conn" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\atm.accdb;"
+      providerName="System.Data.OleDb" />
+    <add name="project.My.MySettings.atmConnectionString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\atm.accdb;"
+      providerName="System.Data.OleDb" />
   </connectionStrings>
 </configuration>
